<resources>
    <string name="app_name">DeviceBank</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu">DeviceBank</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="formulario_nome">Nome</string>
    <string name="formulario_senha">Senha</string>
    <string name="formulario_senha_confirma">Confirma Senha</string>
    <string name="formulario_email">Email</string>
    <string name="formulario_telefone">Telefone</string>
    <string name="formulario_saldo">Saldo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="conta_button_consulta">Consulta</string>
    <string name="conta_button_desbloqueio">Desbloqueio</string>
    <string name="conta_buton_solicita">Solicitar Cartão</string>
    <string name="menu_title_cartoes">Cartões</string>
    <string name="menu_title_conta">Conta</string>
    <string name="menu_title_pagamento">Pagamento</string>
    <string name="menu_title_transferencia">Transferência</string>
    <string name="menu_title_saida">Sair</string>
    <string name="chave_segurança">CHAVE DE SEGURANÇA</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>
