<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/primary_items"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_conta"
            android:checked="true"
            android:icon="@mipmap/ic_wallet"
            android:title="@string/menu_title_conta" />

        <item
            android:id="@+id/menu_cartoes"
            android:icon="@mipmap/ic_cartoes"
            android:title="@string/menu_title_cartoes" />

        <item
            android:id="@+id/menu_pagamento"
            android:icon="@mipmap/ic_payment"
            android:title="@string/menu_title_pagamento" />
        <item
            android:id="@+id/menu_transferencia"
            android:icon="@mipmap/ic_transfer"
            android:title="@string/menu_title_transferencia" />

    </group>
</menu>
