<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:text="@string/conta_button_consulta"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            />
        <Button
            android:text="@string/conta_button_desbloqueio"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            />
        <Button
            android:text="@string/conta_buton_solicita"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            />
    </LinearLayout>

</RelativeLayout>