<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:text="@string/conta_button_consulta"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableRight="@mipmap/ic_next"
            />
        <Button
            android:text="@string/conta_button_desbloqueio"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableRight="@mipmap/ic_next"
            />
        <Button
            android:text="@string/conta_buton_solicita"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableRight="@mipmap/ic_next"
            />
    </LinearLayout>

</RelativeLayout>